--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ WorldCup/bin/
 WorldCup/obj/
 WorldCupWPF/bin/
 WorldCupWPF/obj/
+/WorldCup/Settings/Pictures/1_Claudia ENDLER.png
+/WorldCup/Settings/Pictures/23_Danijel SUBASIC.png
+/WorldCup/Settings/Pictures/2_Kanjanaporn SAENKHUN.png
+/WorldCup/Settings/Pictures/2_Sime VRSALJKO.png
+/WorldCup/Settings/Pictures/3_Ivan STRINIC.png
+/WorldCup/Settings/Pictures/3_PEPE.png
