--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ WorldCupWPF/obj/
 /WorldCup/Settings/Pictures/2_Sime VRSALJKO.png
 /WorldCup/Settings/Pictures/3_Ivan STRINIC.png
 /WorldCup/Settings/Pictures/3_PEPE.png
+/WorldCupWPF/Settings/settings.xml
