--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ WorldCupWPF/obj/
 /WorldCup/Settings/Pictures/3_Ivan STRINIC.png
 /WorldCup/Settings/Pictures/3_PEPE.png
 /WorldCupWPF/Settings/settings.xml
+/WCWebAPI/WCWebAPI.csproj
